--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -19,29 +19,29 @@
 
                 <ul class="nav nav-list ace-nav-left">
                   <li class="active">
-                    <a href="index.html">
-                      <i class="icon-dashboard"></i>
-                      <span class="menu-text"> 关注的项目</span>
-                    </a>
-                  </li>
-
-                  <li >
-                    <a href="index.html">
-                      <i class="icon-dashboard"></i>
+                    <a href="#">
+                      <i class="icon-book "></i>
                       <span class="menu-text"> 全部项目</span>
                     </a>
                   </li>
 
+                  <li >
+                    <a href="#">
+                      <i class="icon-flag "></i>
+                      <span class="menu-text"> 关注的项目</span>
+                    </a>
+                  </li>
+
                   <li>
-                    <a href="typography.html">
-                      <i class="icon-text-width"></i>
+                    <a href="#">
+                      <i class="icon-folder-close "></i>
                       <span class="menu-text"> 归档项目 </span>
                     </a>
                   </li>
 
                   <li>
                     <a href="#" class="dropdown-toggle">
-                      <i class="icon-desktop"></i>
+                      <i class="icon-bookmark"></i>
                       <span class="menu-text"> 个人项目 </span>
 
                       <b class="arrow icon-angle-down"></b>
@@ -49,81 +49,38 @@
 
                     <ul class="submenu">
                       <li>
-                        <a href="elements.html">
+                        <a href="#">
                           <i class="icon-double-angle-right"></i>
-                          组件
+                          项目1
                         </a>
                       </li>
 
                       <li>
-                        <a href="buttons.html">
+                        <a href="#">
                           <i class="icon-double-angle-right"></i>
-                          按钮 &amp; 图表
+                          项目2
                         </a>
                       </li>
 
                       <li>
-                        <a href="treeview.html">
+                        <a href="#">
                           <i class="icon-double-angle-right"></i>
-                          树菜单
+                          项目3
                         </a>
                       </li>
 
                       <li>
-                        <a href="jquery-ui.html">
+                        <a href="#">
                           <i class="icon-double-angle-right"></i>
-                          jQuery UI
+                         项目4
                         </a>
                       </li>
 
                       <li>
-                        <a href="nestable-list.html">
+                        <a href="#">
                           <i class="icon-double-angle-right"></i>
-                          可拖拽列表
+                          项目5
                         </a>
-                      </li>
-
-                      <li>
-                        <a href="#" class="dropdown-toggle">
-                          <i class="icon-double-angle-right"></i>
-
-                          三级菜单
-                          <b class="arrow icon-angle-down"></b>
-                        </a>
-
-                        <ul class="submenu">
-                          <li>
-                            <a href="#">
-                              <i class="icon-leaf"></i>
-                              第一级
-                            </a>
-                          </li>
-
-                          <li>
-                            <a href="#" class="dropdown-toggle">
-                              <i class="icon-pencil"></i>
-
-                              第四级
-                              <b class="arrow icon-angle-down"></b>
-                            </a>
-
-                            <ul class="submenu">
-                              <li>
-                                <a href="#">
-                                  <i class="icon-plus"></i>
-                                  添加产品
-                                </a>
-                              </li>
-
-                              <li>
-                                <a href="#">
-                                  <i class="icon-eye-open"></i>
-                                  查看商品
-                                </a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
                       </li>
                     </ul>
                   </li>
@@ -140,14 +97,14 @@
                       <li>
                         <a href="tables.html">
                           <i class="icon-double-angle-right"></i>
-                          简单 &amp; 动态
+                          项目1
                         </a>
                       </li>
 
                       <li>
                         <a href="jqgrid.html">
                           <i class="icon-double-angle-right"></i>
-                          jqGrid plugin
+                          项目2
                         </a>
                       </li>
                     </ul>
@@ -155,7 +112,7 @@
 
                   <li>
                     <a href="#" class="dropdown-toggle">
-                      <i class="icon-edit"></i>
+                      <i class="icon-group "></i>
                       <span class="menu-text"> 团队成员 </span>
 
                       <b class="arrow icon-angle-down"></b>
@@ -165,28 +122,77 @@
                       <li>
                         <a href="form-elements.html">
                           <i class="icon-double-angle-right"></i>
-                          表单组件
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="form-wizard.html">
-                          <i class="icon-double-angle-right"></i>
-                          向导提示 &amp; 验证
-                        </a>
-                      </li>
-
-                      <li>
-                        <a href="wysiwyg.html">
-                          <i class="icon-double-angle-right"></i>
-                          编辑器
+                          李毅杰（大师）
                         </a>
                       </li>
 
                       <li>
                         <a href="dropzone.html">
                           <i class="icon-double-angle-right"></i>
-                          文件上传
+                          汤工（工程师）
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="form-wizard.html">
+                          <i class="icon-double-angle-right"></i>
+                          崔军伟（工程师）
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="wysiwyg.html">
+                          <i class="icon-double-angle-right"></i>
+                          樊伟（工程师）
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          陈博
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          曹子莹
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          张留刚
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          于子荀
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          瞿sir
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          刘婷婷
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="dropzone.html">
+                          <i class="icon-double-angle-right"></i>
+                          冯亚芬
                         </a>
                       </li>
                     </ul>
@@ -195,7 +201,6 @@
                   <li>
                     <a href="calendar.html">
                       <i class="icon-calendar"></i>
-
                       <span class="menu-text">
                         日历
                         <span class="badge badge-transparent tooltip-error" title="2&nbsp;Important&nbsp;Events">
@@ -288,7 +293,9 @@
                               <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                             <div class="col-sm-3 text-center">
-                              <%=image_tag"schedule.png"%>
+                                <div class="easy-pie-chart percentage" data-percent="20" data-color="#fff">
+                                <span class="percent percent_number">20</span>%
+                                </div>
                             </div>
                             <div class="col-sm-9">
                               <h4>在线教育平台</h4>
@@ -305,7 +312,9 @@
                               <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                             <div class="col-sm-3 text-center">
-                              <%=image_tag"schedule.png"%>
+                              <div class="easy-pie-chart percentage" data-percent="60" data-color="#fff">
+                                <span class="percent percent_number">60</span>%
+                                </div>
                             </div>
                             <div class="col-sm-9">
                               <h4>在线教育平台</h4>
@@ -321,7 +330,9 @@
                               <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                             <div class="col-sm-3 text-center">
-                              <%=image_tag"schedule.png"%>
+                              <div class="easy-pie-chart percentage" data-percent="40" data-color="#fff">
+                                <span class="percent percent_number">40</span>%
+                                </div>
                             </div>
                             <div class="col-sm-9">
                               <h4>在线教育平台</h4>
@@ -337,7 +348,9 @@
                               <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
                             </div>
                             <div class="col-sm-3 text-center">
-                              <%=image_tag"schedule.png"%>
+                              <div class="easy-pie-chart percentage" data-percent="46" data-color="#fff">
+                                <span class="percent percent_number">46</span>%
+                                </div>
                             </div>
                             <div class="col-sm-9">
                               <h4>在线教育平台</h4>
@@ -356,5 +369,21 @@
         <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
         <i class="icon-double-angle-up icon-only bigger-110"></i>
         </a>
-</div>
 
+<script type="text/javascript">
+jQuery(function($){
+  var oldie = /msie\s*(8|7|6)/.test(navigator.userAgent.toLowerCase());
+  $('.easy-pie-chart.percentage').each(function(){
+          $(this).easyPieChart({
+            barColor: $(this).data('color'),
+            trackColor: 'rgba(255,255,255,0.4)',
+            scaleColor: false,
+            lineCap: 'butt',
+            lineWidth: 12,
+            animate: oldie ? false : 1000,
+            size:107
+          }).css('color', $(this).data('color'));
+        });
+});
+</script><!-- ./環裝讀條百分比  -->
+</div>
