--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -255,32 +255,18 @@
                 <div class="row">
                   <div class="col-xs-12">
                     <!-- PAGE CONTENT BEGINS -->
-                    <div class="col-xs-6 ace_content_page_left">
-                    <div class="row">
-                        <div class="col-xs-12 ace_content_left_title">
+                    <div class="col-xs-6 ace_content_left_title">
                           <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                              <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加任务
+                              <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
                           </a>
-                        </div>
                     </div>
-                    </div>
-                    <div class="col-xs-6 ace_content_page_right">
-                    <div class="row">
-                    <div class="col-xs-12 ace_content_right_title">
-                        <form class="form-search">
-                        <span class="input-icon">
-                        <input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-                        <i class="icon-search nav-search-icon"></i>
-                        </span>
+                    <div class="col-xs-6 ace_content_right_title">
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
                         </a>
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
                         </a>
-                        </form><!-- #nav-search -->
-                    </div>
-                    </div>
                     </div>
                     <div class="col-xs-12 main-bg">
                         <div class="col-sm-6">
@@ -369,9 +355,9 @@
         <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
         <i class="icon-double-angle-up icon-only bigger-110"></i>
         </a>
+</div>
 
 <script type="text/javascript">
-jQuery(function($){
   var oldie = /msie\s*(8|7|6)/.test(navigator.userAgent.toLowerCase());
   $('.easy-pie-chart.percentage').each(function(){
           $(this).easyPieChart({
@@ -384,6 +370,4 @@ jQuery(function($){
             size:107
           }).css('color', $(this).data('color'));
         });
-});
 </script><!-- ./環裝讀條百分比  -->
-</div>
