--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .main-bg{
-  padding: 40px 0;
+  padding: 20px 0;
   color: #fff;
   .main{
     margin:0 0px 15px 0px;
@@ -34,36 +34,56 @@
   text-align:center;
   padding-bottom:5px;
   padding-top:5px;
-    .project_name_t {
+  
+  .project_name_t {
     font-size:18px;
     color:#fff;
+  }
 }
-}
-.ace-nav-left > li  {
-  border-color:#222A2D!important;
-      a {  
+.ace-nav-left {
+  i {
+    font-size:14px!important;
+  }
+  li.active> a {
+    background-color:#00ACAC!important;
+    color:#fff!important;
+  }
+  li {
+    border-color:#222A2D!important;
+    .submenu>li>a:hover{
+      color:#fff!important;
+    }
+    a {  
       padding:0 6px;
     }
+  }
 }
-.ace_content_page_left, .ace_content_page_right{
-  border: solid 0.5px #e1e1e1;
-}
+.page-content {
+  padding:1px 1px 25px;
+  .ace_content_page_left, .ace_content_page_right{
+    border: solid 0.5px #e1e1e1;
+  }
   .ace_content_right_title, .ace_content_left_title {
     background-color:#19B29F;
-    padding:10px;
     .input-icon > input {
       border-radius:100px !important;
+      margin-top:3px;
     }
     .ace_bell, .ace_ques {
-      margin:10px 5px;
+      margin:6.5px 5px;
+      font-size:20px;
     }
     .ace_plus {
       margin:6.5px 5px;
-       padding:2px;
+      padding:2px;
       border:solid 2px #fff;
       border-radius:10px;
     }
   }
+  .ace_content_right_title  {
+    background-color:#00CBD2;
+  }
+}
 .my-task{
 	padding: 0 10px;
 	.my-line{
