--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -252,8 +252,8 @@
 
             <div class="main-content">
               <div class="page-content">
-                <div class="row">
                   <div class="col-xs-12">
+                  <div class="row">
                     <!-- PAGE CONTENT BEGINS -->
                     <div class="col-xs-6 ace_content_left_title">
                       <%= link_to(new_training_platform_project_path,remote: true, format: :js) do %>
@@ -267,6 +267,8 @@
                         <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                         <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
                         </a>
+                    </div>
+                    </div>
                     </div>
                     <div class="col-xs-12 main-bg">
                         <div class="col-sm-6">
@@ -346,8 +348,6 @@
                         </div>
                     <!-- PAGE CONTENT ENDS -->
                     </div>
-                  </div><!-- /.col -->
-                </div><!-- /.row -->
               </div><!-- /.page-content -->
             </div><!-- /.main-content -->
         </div>
