--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -240,28 +240,30 @@
 
 		<div class="main-content">
 			<div class="page-content">
-				<div class="row">
 					<div class="col-xs-12">
 						<div class="row">
-							<div class="col-xs-12">
-								<div class="row">
-									<ul class="breadcrumb">
-										<li>
-											<i class="icon-home home-icon"></i>
-											<a href="<%=training_platform_root_path %>">Home</a>
-										</li>
-										<li class="active">Blank Page</li>
-									</ul><!-- .breadcrumb -->
+								<!-- PAGE CONTENT BEGINS -->
+								<div class="col-xs-6 ace_content_left_title">
+									<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+									<span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
+									</a>
 								</div>
-							</div>
-							<!-- PAGE CONTENT BEGINS -->
-							<div class="col-xs-6 ace_content_page_left">
-								<div class="row">
-									<div class="col-xs-12 ace_content_left_title">
-										<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-											<span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加任务
-										</a>
-									</div>
+								<div class="col-xs-6 ace_content_right_title">
+								<form class="form-search">
+								<span class="input-icon">
+										<input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
+										<i class="icon-search nav-search-icon"></i>
+								</span>
+								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+									<span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
+								</a>
+								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+									<i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
+								</a>
+								</form><!-- #nav-search -->
+								</div>
+
+								<div class="col-xs-6 ace_content_page_left">
 									<div class="my-task">
 										<h3>我的任务</h3>
 										<hr class="my-line">
@@ -324,34 +326,18 @@
 									</div>
 									<%end%>
 								</div>
-							</div>
-							<div class="col-xs-6 ace_content_page_right">
-								<div class="row">
-									<div class="col-xs-12 ace_content_right_title">
-										<form class="form-search">
-											<span class="input-icon">
-												<input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-												<i class="icon-search nav-search-icon"></i>
-											</span>
-											<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-												<span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-											</a>
-											<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-												<i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-											</a>
-										</form><!-- #nav-search -->
-									</div>
-									<div class="my-task">
-										<h3>我的任务</h3>
-										<hr class="my-line">
-									</div>
-									2222222<br>
+
+								<div class="col-xs-6 ace_content_page_right">
+									33333333
 								</div>
-							</div>
+								
+
+
+
+								
 							<!-- PAGE CONTENT ENDS -->
 						</div>
 					</div><!-- /.col -->
-				</div><!-- /.row -->
 			</div><!-- /.page-content -->
 		</div><!-- /.main-content -->
 	</div>
