--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -96,6 +96,11 @@
 		</div>
 	</div>
 </div>
+
+<%= content_for :scripts do %>
+  <%= javascript_include_tag "app/wow", 'data-turbolinks-track' => true  %>
+<% end %>
+
 <script type="text/javascript">
 	wow = new WOW(
       {
@@ -109,6 +114,3 @@
     wow.init();
 </script>
 
-<%= content_for :scripts do %>
-  <%= javascript_include_tag "wow", 'data-turbolinks-track' => true  %>
-<% end %>
