--- a/app/views/training_platform/tasks/index.html.erb
+++ b/app/views/training_platform/tasks/index.html.erb
@@ -8,49 +8,343 @@
       <span class="menu-text"></span>
     </a>
 
-    <%= render "training_platform/share/left_nav" %>
+    <div class="sidebar" id="sidebar">
+      <script type="text/javascript">
+        try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
+      </script>
+
+      <div class="project_name">
+        <span class="project_name_t">这里是项目名称</span>
+      </div>
+
+      <ul class="nav nav-list ace-nav-left">
+        <li class="active">
+          <a href="index.html">
+            <i class="icon-dashboard"></i>
+            <span class="menu-text"> 公告信息 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="typography.html">
+            <i class="icon-text-width"></i>
+            <span class="menu-text"> 文字排版 </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="#" class="dropdown-toggle">
+            <i class="icon-desktop"></i>
+            <span class="menu-text"> 我的任务 </span>
+
+            <b class="arrow icon-angle-down"></b>
+          </a>
+
+          <ul class="submenu">
+            <li>
+              <a href="elements.html">
+                <i class="icon-double-angle-right"></i>
+                组件
+              </a>
+            </li>
+
+            <li>
+              <a href="buttons.html">
+                <i class="icon-double-angle-right"></i>
+                按钮 &amp; 图表
+              </a>
+            </li>
+
+            <li>
+              <a href="treeview.html">
+                <i class="icon-double-angle-right"></i>
+                树菜单
+              </a>
+            </li>
+
+            <li>
+              <a href="jquery-ui.html">
+                <i class="icon-double-angle-right"></i>
+                jQuery UI
+              </a>
+            </li>
+
+            <li>
+              <a href="nestable-list.html">
+                <i class="icon-double-angle-right"></i>
+                可拖拽列表
+              </a>
+            </li>
+
+            <li>
+              <a href="#" class="dropdown-toggle">
+                <i class="icon-double-angle-right"></i>
+
+                三级菜单
+                <b class="arrow icon-angle-down"></b>
+              </a>
+
+              <ul class="submenu">
+                <li>
+                  <a href="#">
+                    <i class="icon-leaf"></i>
+                    第一级
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#" class="dropdown-toggle">
+                    <i class="icon-pencil"></i>
+
+                    第四级
+                    <b class="arrow icon-angle-down"></b>
+                  </a>
+
+                  <ul class="submenu">
+                    <li>
+                      <a href="#">
+                        <i class="icon-plus"></i>
+                        添加产品
+                      </a>
+                    </li>
+
+                    <li>
+                      <a href="#">
+                        <i class="icon-eye-open"></i>
+                        查看商品
+                      </a>
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#" class="dropdown-toggle">
+            <i class="icon-list"></i>
+            <span class="menu-text"> 任务列表 </span>
+
+            <b class="arrow icon-angle-down"></b>
+          </a>
+
+          <ul class="submenu">
+            <li>
+              <a href="tables.html">
+                <i class="icon-double-angle-right"></i>
+                简单 &amp; 动态
+              </a>
+            </li>
+
+            <li>
+              <a href="jqgrid.html">
+                <i class="icon-double-angle-right"></i>
+                jqGrid plugin
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="#" class="dropdown-toggle">
+            <i class="icon-edit"></i>
+            <span class="menu-text"> 团队成员 </span>
+
+            <b class="arrow icon-angle-down"></b>
+          </a>
+
+          <ul class="submenu">
+            <li>
+              <a href="form-elements.html">
+                <i class="icon-double-angle-right"></i>
+                表单组件
+              </a>
+            </li>
+
+            <li>
+              <a href="form-wizard.html">
+                <i class="icon-double-angle-right"></i>
+                向导提示 &amp; 验证
+              </a>
+            </li>
+
+            <li>
+              <a href="wysiwyg.html">
+                <i class="icon-double-angle-right"></i>
+                编辑器
+              </a>
+            </li>
+
+            <li>
+              <a href="dropzone.html">
+                <i class="icon-double-angle-right"></i>
+                文件上传
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li>
+          <a href="calendar.html">
+            <i class="icon-calendar"></i>
+
+            <span class="menu-text">
+              日历
+              <span class="badge badge-transparent tooltip-error" title="2&nbsp;Important&nbsp;Events">
+                <i class="icon-warning-sign red bigger-130"></i>
+              </span>
+            </span>
+          </a>
+        </li>
+
+        <div class="sidebar-shortcuts" id="sidebar-shortcuts">
+          <div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
+            <button class="btn btn-success">
+              <i class="icon-signal"></i>
+            </button>
+
+            <button class="btn btn-info">
+              <i class="icon-pencil"></i>
+            </button>
+
+            <button class="btn btn-warning">
+              <i class="icon-group"></i>
+            </button>
+
+            <button class="btn btn-danger">
+              <i class="icon-cogs"></i>
+            </button>
+          </div>
+
+          <div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
+            <span class="btn btn-success"></span>
+
+            <span class="btn btn-info"></span>
+
+            <span class="btn btn-warning"></span>
+
+            <span class="btn btn-danger"></span>
+          </div>
+        </div><!-- #sidebar-shortcuts -->
+      </ul><!-- /.nav-list -->
+
+      <div class="sidebar-collapse" id="sidebar-collapse">
+        <i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
+      </div>
+
+      <script type="text/javascript">
+        try{ace.settings.check('sidebar' , 'collapsed')}catch(e){}
+      </script>
+    </div>
 
     <div class="main-content">
       <div class="page-content">
-        <div class="row">
           <div class="col-xs-12">
-          <div class="row">
-            <!-- PAGE CONTENT BEGINS -->
-            <div class="col-xs-6 ace_content_page_left">
-              <div class="row">
-                <div class="col-xs-12 ace_content_left_title">
+            <div class="row">
+                <!-- PAGE CONTENT BEGINS -->
+                <div class="col-xs-6 ace_content_left_title">
                   <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                    <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加任务
+                  <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
                   </a>
                 </div>
-              </div>
-            </div>
-            <div class="col-xs-6 ace_content_page_right">
-              <div class="row">
-                <div class="col-xs-12 ace_content_right_title">
-                  <form class="form-search">
-                    <span class="input-icon">
-                      <input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-                      <i class="icon-search nav-search-icon"></i>
-                    </span>
-                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                      <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-                    </a>
-                    <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                      <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-                    </a>
-                  </form><!-- #nav-search -->
+                <div class="col-xs-6 ace_content_right_title">
+                <form class="form-search">
+                <span class="input-icon">
+                    <input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
+                    <i class="icon-search nav-search-icon"></i>
+                </span>
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                  <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
+                </a>
+                <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                  <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
+                </a>
+                </form><!-- #nav-search -->
                 </div>
-              </div>
-            </div>
-            <!-- PAGE CONTENT ENDS -->
+
+                <div class="col-xs-6 ace_content_page_left">
+                  <div class="my-task">
+                    <h3>我的任务</h3>
+                    <hr class="my-line">
+                  </div>
+                  <h4 class="my-progress">待办中（0）</h4>
+                  <%2.times do%>
+                  <div class="row backlog">
+                    <div class="dropdown col-xs-3">
+                      <button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        待办中
+                        <span class="caret my-caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-xs-3"><span class="business">业务需求讨论</span></div>
+                    <div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
+                  </div>
+                  <%end%>
+                  <h4 class="my-progress">进行中（0）</h4>
+                  <%2.times do%>
+                  <div class="row backlog">
+                    <div class="dropdown col-xs-3">
+                      <button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        待办中
+                        <span class="caret my-caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-xs-3"><span class="business">业务需求讨论</span></div>
+                    <div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
+                  </div>
+                  <%end%>
+                  <h4 class="my-progress">已完成（0）</h4>
+                  <%2.times do%>
+                  <div class="row backlog">
+                    <div class="dropdown col-xs-3">
+                      <button class="my-btn btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                        待办中
+                        <span class="caret my-caret"></span>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li><a href="#">Separated link</a></li>
+                      </ul>
+                    </div>
+                    <div class="col-xs-3"><span class="business">业务需求讨论</span></div>
+                    <div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
+                  </div>
+                  <%end%>
+                </div>
+
+                <div class="col-xs-6 ace_content_page_right">
+                  33333333
+                </div>
+                
+
+
+
+                
+              <!-- PAGE CONTENT ENDS -->
             </div>
           </div><!-- /.col -->
-        </div><!-- /.row -->
       </div><!-- /.page-content -->
     </div><!-- /.main-content -->
   </div>
+
+
   <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
     <i class="icon-double-angle-up icon-only bigger-110"></i>
   </a>
 </div>
+
