--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -76,8 +76,12 @@
     .ace_plus {
       margin:6.5px 5px;
       padding:2px;
+      color:#fff;
       border:solid 2px #fff;
       border-radius:10px;
+    }
+    .ace_plus_word {
+      color:#fff;
     }
   }
   .ace_content_right_title  {
