--- a/app/views/training_platform/home/index.html.erb
+++ b/app/views/training_platform/home/index.html.erb
@@ -257,7 +257,7 @@
                     <!-- PAGE CONTENT BEGINS -->
                     <div class="col-xs-6 ace_content_left_title">
                       <%= link_to(new_training_platform_project_path,remote: true, format: :js) do %>
-                        <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
+                        <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
                       <% end %>
                     </div>
                     <div class="col-xs-6 ace_content_right_title">
