--- a/app/views/layouts/training_platform.html.erb
+++ b/app/views/layouts/training_platform.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Walnut</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=0" />
   <%= stylesheet_link_tag    'training_platform', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'training_platform', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
