--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -1,423 +1,83 @@
 <div class="main-container" id="main-container">
-	<script type="text/javascript">
-		try{ace.settings.check('main-container' , 'fixed')}catch(e){}
-	</script>
+  <script type="text/javascript">
+    try{ace.settings.check('main-container' , 'fixed')}catch(e){}
+  </script>
 
-	<div class="main-container-inner">
-		<a class="menu-toggler" id="menu-toggler" href="#">
-			<span class="menu-text"></span>
-		</a>
+  <div class="main-container-inner">
+    <a class="menu-toggler" id="menu-toggler" href="#">
+      <span class="menu-text"></span>
+    </a>
 
-		<div class="sidebar" id="sidebar">
-			<script type="text/javascript">
-				try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
-			</script>
+    <%= render 'training_platform/projects/left_nav'%>
 
-			<div class="project_name">
-				<span class="project_name_t">这里是项目名称</span>
-			</div>
+    <div class="main-content">
+      <div class="page-content">
+        <div class="col-sm-12 col-xs-12 col-md-12 col-lg-12">
+          <div class="row">
+            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_left_title">
+              <%= link_to(new_training_platform_project_path,remote: true, format: :js) do %>
+                <span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span><span class="ace_plus_word">添加项目</span>
+              <% end %>
+            </div>
+            <div class="col-xs-6 col-md-6 col-sm-6 col-lg-6 ace_content_right_title">
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
+              </a>
+              <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+                <i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 main-bg">
+          <% @projects.each_with_index do |project,index| %>
+            <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6">
+              <%= link_to training_platform_tasks_path do %>
+                <div class="row <%= project_bc index %> main">
+                  <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
+                    <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                    <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                  </div>
+                  <div class="col-xs-4 col-md-3 col-sm-3 col-lg-3 text-center">
+                    <div class="easy-pie-chart percentage" data-percent="20" data-color="#fff">
+                      <span class="percent percent_number">20</span>%
+                    </div>
+                  </div>
+                  <div class="col-xs-8 col-md-9 col-sm-9 col-lg-9">
+                    <h4><%= project.name %></h4>
+                    <p>
+                      （总任务：<%= project.tasks.count %>   
+                      已完成：<%= project.tasks.completes.count %>   
+                      待办中：<%= project.tasks.waits.count %>   
+                      验收通过：<%= project.tasks.acceprances.count %>   ）
+                    </p>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
 
-			<ul class="nav nav-list ace-nav-left">
-				<li class="active">
-					<a href="index.html">
-						<i class="icon-dashboard"></i>
-						<span class="menu-text"> 公告信息 </span>
-					</a>
-				</li>
-
-				<li>
-					<a href="typography.html">
-						<i class="icon-text-width"></i>
-						<span class="menu-text"> 文字排版 </span>
-					</a>
-				</li>
-
-				<li>
-					<a href="#" class="dropdown-toggle">
-						<i class="icon-desktop"></i>
-						<span class="menu-text"> 我的任务 </span>
-
-						<b class="arrow icon-angle-down"></b>
-					</a>
-
-					<ul class="submenu">
-						<li>
-							<a href="elements.html">
-								<i class="icon-double-angle-right"></i>
-								组件
-							</a>
-						</li>
-
-						<li>
-							<a href="buttons.html">
-								<i class="icon-double-angle-right"></i>
-								按钮 &amp; 图表
-							</a>
-						</li>
-
-						<li>
-							<a href="treeview.html">
-								<i class="icon-double-angle-right"></i>
-								树菜单
-							</a>
-						</li>
-
-						<li>
-							<a href="jquery-ui.html">
-								<i class="icon-double-angle-right"></i>
-								jQuery UI
-							</a>
-						</li>
-
-						<li>
-							<a href="nestable-list.html">
-								<i class="icon-double-angle-right"></i>
-								可拖拽列表
-							</a>
-						</li>
-
-						<li>
-							<a href="#" class="dropdown-toggle">
-								<i class="icon-double-angle-right"></i>
-
-								三级菜单
-								<b class="arrow icon-angle-down"></b>
-							</a>
-
-							<ul class="submenu">
-								<li>
-									<a href="#">
-										<i class="icon-leaf"></i>
-										第一级
-									</a>
-								</li>
-
-								<li>
-									<a href="#" class="dropdown-toggle">
-										<i class="icon-pencil"></i>
-
-										第四级
-										<b class="arrow icon-angle-down"></b>
-									</a>
-
-									<ul class="submenu">
-										<li>
-											<a href="#">
-												<i class="icon-plus"></i>
-												添加产品
-											</a>
-										</li>
-
-										<li>
-											<a href="#">
-												<i class="icon-eye-open"></i>
-												查看商品
-											</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-					</ul>
-				</li>
-
-				<li>
-					<a href="#" class="dropdown-toggle">
-						<i class="icon-list"></i>
-						<span class="menu-text"> 任务列表 </span>
-
-						<b class="arrow icon-angle-down"></b>
-					</a>
-
-					<ul class="submenu">
-						<li>
-							<a href="tables.html">
-								<i class="icon-double-angle-right"></i>
-								简单 &amp; 动态
-							</a>
-						</li>
-
-						<li>
-							<a href="jqgrid.html">
-								<i class="icon-double-angle-right"></i>
-								jqGrid plugin
-							</a>
-						</li>
-					</ul>
-				</li>
-
-				<li>
-					<a href="#" class="dropdown-toggle">
-						<i class="icon-edit"></i>
-						<span class="menu-text"> 团队成员 </span>
-
-						<b class="arrow icon-angle-down"></b>
-					</a>
-
-					<ul class="submenu">
-						<li>
-							<a href="form-elements.html">
-								<i class="icon-double-angle-right"></i>
-								表单组件
-							</a>
-						</li>
-
-						<li>
-							<a href="form-wizard.html">
-								<i class="icon-double-angle-right"></i>
-								向导提示 &amp; 验证
-							</a>
-						</li>
-
-						<li>
-							<a href="wysiwyg.html">
-								<i class="icon-double-angle-right"></i>
-								编辑器
-							</a>
-						</li>
-
-						<li>
-							<a href="dropzone.html">
-								<i class="icon-double-angle-right"></i>
-								文件上传
-							</a>
-						</li>
-					</ul>
-				</li>
-
-				<li>
-					<a href="calendar.html">
-						<i class="icon-calendar"></i>
-
-						<span class="menu-text">
-							日历
-							<span class="badge badge-transparent tooltip-error" title="2&nbsp;Important&nbsp;Events">
-								<i class="icon-warning-sign red bigger-130"></i>
-							</span>
-						</span>
-					</a>
-				</li>
-
-				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
-					<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-						<button class="btn btn-success">
-							<i class="icon-signal"></i>
-						</button>
-
-						<button class="btn btn-info">
-							<i class="icon-pencil"></i>
-						</button>
-
-						<button class="btn btn-warning">
-							<i class="icon-group"></i>
-						</button>
-
-						<button class="btn btn-danger">
-							<i class="icon-cogs"></i>
-						</button>
-					</div>
-
-					<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-						<span class="btn btn-success"></span>
-
-						<span class="btn btn-info"></span>
-
-						<span class="btn btn-warning"></span>
-
-						<span class="btn btn-danger"></span>
-					</div>
-				</div><!-- #sidebar-shortcuts -->
-			</ul><!-- /.nav-list -->
-
-			<div class="sidebar-collapse" id="sidebar-collapse">
-				<i class="icon-double-angle-left" data-icon1="icon-double-angle-left" data-icon2="icon-double-angle-right"></i>
-			</div>
-
-			<script type="text/javascript">
-				try{ace.settings.check('sidebar' , 'collapsed')}catch(e){}
-			</script>
-		</div>
-
-		<div class="main-content">
-			<div class="page-content">
-					<div class="col-xs-12">
-						<div class="row">
-								<!-- PAGE CONTENT BEGINS -->
-								<div class="col-xs-6 ace_content_left_title">
-									<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-									<span class="glyphicon glyphicon-plus ace_plus" aria-hidden="true"></span>添加项目
-									</a>
-								</div>
-								<div class="col-xs-6 ace_content_right_title">
-								<form class="form-search">
-								<span class="input-icon">
-										<input type="text" placeholder="请输入关键字" class="nav-search-input" id="nav-search-input" autocomplete="off" />
-										<i class="icon-search nav-search-icon"></i>
-								</span>
-								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-									<span class="glyphicon glyphicon-question-sign ace_ques pull-right" aria-hidden="true"></span>
-								</a>
-								<a data-toggle="dropdown" class="dropdown-toggle" href="#">
-									<i class="icon-bell-alt icon-animated-bell pull-right ace_bell"></i>
-								</a>
-								</form><!-- #nav-search -->
-								</div>
-
-								<div class="col-xs-6 ace_content_page_left">
-									<div class="my-task">
-										<h3>我的任务</h3>
-										<hr class="my-line">
-									</div>
-									<h4 class="my-progress">待办中（0）</h4>
-									<%2.times do%>
-									<div class="row backlog">
-										<div class="dropdown col-xs-3">
-											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-												待办中
-												<span class="caret my-caret"></span>
-											</button>
-											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-												<li><a href="#">Action</a></li>
-												<li><a href="#">other</a></li>
-												<li><a href="#">Some</a></li>
-												<li><a href="#">link</a></li>
-											</ul>
-										</div>
-										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
-										<div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
-									</div>
-									<%end%>
-									<h4 class="my-progress">进行中（0）</h4>
-									<%2.times do%>
-									<div class="row backlog">
-										<div class="dropdown col-xs-3">
-											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-												待办中
-												<span class="caret my-caret"></span>
-											</button>
-											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-												<li><a href="#">Action</a></li>
-												<li><a href="#">other</a></li>
-												<li><a href="#">Some</a></li>
-												<li><a href="#">link</a></li>
-											</ul>
-										</div>
-										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
-										<div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
-									</div>
-									<%end%>
-									<h4 class="my-progress">已完成（0）</h4>
-									<%2.times do%>
-									<div class="row backlog">
-										<div class="dropdown col-xs-3">
-											<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-												待办中
-												<span class="caret my-caret"></span>
-											</button>
-											<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-												<li><a href="#">Action</a></li>
-												<li><a href="#">other</a></li>
-												<li><a href="#">Some</a></li>
-												<li><a href="#">link</a></li>
-											</ul>
-										</div>
-										<div class="col-xs-3"><span class="business">业务需求讨论</span></div>
-										<div class="col-xs-6 text-right"><span class="business">2015-07-15</span></div>
-									</div>
-									<%end%>
-								</div>
-
-								<div class="col-xs-6 ace_content_page_right">
-									<div class="my-task">
-										<h3>任务详情</h3>
-										<hr class="my-line">
-									</div>
-									<div class="my-details">
-										<div class="col-xs-2 dropdown">
-											<botton class="my-btn my-black btn btn-default">所属任务</botton>
-										</div>
-										<div class="col-xs-2 dropdown" style="padding-left:10px">
-											<div class="dropdown">
-												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-													负责人
-													<span class="caret my-caret"></span>
-												</button>
-												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-													<li><a href="#">Action</a></li>
-													<li><a href="#">other</a></li>
-													<li><a href="#">Some</a></li>
-													<li><a href="#">Separate</a></li>
-												</ul>
-											</div>
-										</div>
-										<div class="col-xs-2 dropdown" style="padding-left:20px">
-											<botton class="my-btn my-black btn btn-default">截止日期</botton>
-										</div>
-										<div class="col-xs-2 dropdown" style="padding-left:30px">
-											<div class="dropdown">
-												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-													优先级
-													<span class="caret my-caret"></span>
-												</button>
-												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-													<li><a href="#">Action</a></li>
-													<li><a href="#">other</a></li>
-													<li><a href="#">Some</a></li>
-													<li><a href="#">Separate</a></li>
-												</ul>
-											</div>
-										</div>
-										<div class="col-xs-2 dropdown" style="padding-left:40px">
-											<botton class="my-btn my-black btn btn-default">附件</botton>
-										</div>
-										<div class="col-xs-2 dropdown" style="padding-left:25px">
-											<div class="dropdown">
-												<button class="my-btn my-black btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-													操作
-													<span class="caret my-caret"></span>
-												</button>
-												<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-													<li><a href="#">Action</a></li>
-													<li><a href="#">other</a></li>
-													<li><a href="#">Some</a></li>
-													<li><a href="#">Separate</a></li>
-												</ul>
-											</div>
-										</div>
-									</div><br>
-									<div class="col-xs-4">
-										<h4>业务需求讨论</h4>
-									</div>
-									<div class="dropdown col-xs-8">
-										<button class="my-btn my-blue btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-											待办中
-											<span class="caret my-caret"></span>
-										</button>
-										<ul class="dropdown-menu my-menu" aria-labelledby="dropdownMenu1">
-											<li><a href="#">Action</a></li>
-											<li><a href="#">other</a></li>
-											<li><a href="#">Some</a></li>
-											<li><a href="#">link</a></li>
-										</ul>
-									</div><br>
-									<div class="my-task">
-										<h3>任务动态</h3>
-										<hr class="my-line">
-									</div>
-									<div class="my-trends">
-									</div>
-									
-									</div>	
-							<!-- PAGE CONTENT ENDS -->
-						</div>
-					</div><!-- /.col -->
-			</div><!-- /.page-content -->
-		</div><!-- /.main-content -->
-	</div>
-
-
-	<a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
-		<i class="icon-double-angle-up icon-only bigger-110"></i>
-	</a>
+  <a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
+    <i class="icon-double-angle-up icon-only bigger-110"></i>
+  </a>
 </div>
 
+<script type="text/javascript">
+  var oldie = /msie\s*(8|7|6)/.test(navigator.userAgent.toLowerCase());
+  $('.easy-pie-chart.percentage').each(function(){
+    $(this).easyPieChart({
+      barColor: $(this).data('color'),
+      trackColor: 'rgba(255,255,255,0.4)',
+      scaleColor: false,
+      lineCap: 'butt',
+      lineWidth: 12,
+      animate: oldie ? false : 1000,
+      size:90
+    }).css('color', $(this).data('color'));
+  });
+</script><!-- ./環裝讀條百分比  -->
