--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -20,6 +20,11 @@
   .purple-bg{
     background-color: #A600F9;
   }
+  .project-title-show {
+    a {
+      color: #fff;
+    }
+  }
 } 
 //home/index page
 
