--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -31,21 +31,27 @@
         </div>
         <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 main-bg">
           <% @projects.each_with_index do |project,index| %>
-            <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6">
-              <%= link_to training_platform_tasks_path do %>
-                <div class="row <%= project_bc index %> main">
-                  <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
+            <div class="col-xs-12 col-md-6 col-sm-6 col-lg-6 project-title-show">
+              <div class="row <%= project_bc index %> main">
+                <div class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-right">
+                  <%= link_to("#", class: "") do %>
                     <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                  <% end %>
+                  <%= link_to("#" , class: "") do %>
                     <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                  <% end %>
+                  <%= link_to("#" , class: "") do %>
                     <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                  <% end %>
+                </div>
+                <div class="col-xs-4 col-md-3 col-sm-3 col-lg-3 text-center">
+                  <div class="easy-pie-chart percentage" data-percent="<%= project.task_percentage %>" data-color="#fff">
+                    <span class="percent percent_number">
+                      <%= project.task_percentage %>
+                    </span>%
                   </div>
-                  <div class="col-xs-4 col-md-3 col-sm-3 col-lg-3 text-center">
-                    <div class="easy-pie-chart percentage" data-percent="<%= project.task_percentage %>" data-color="#fff">
-                      <span class="percent percent_number">
-                        <%= project.task_percentage %>
-                      </span>%
-                    </div>
-                  </div>
+                </div>
+                <%= link_to training_platform_tasks_path do %>
                   <div class="col-xs-8 col-md-9 col-sm-9 col-lg-9">
                     <h4><%= project.name %></h4>
                     <p>
@@ -55,8 +61,8 @@
                       验收通过：<%= project.tasks.acceprances.count %> ）
                     </p>
                   </div>
-                </div>
-              <% end %>
+                <% end %>
+              </div>
             </div>
           <% end %>
         </div>
