edit & update project

--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -24,6 +24,15 @@
     a {
       color: #fff;
     }
+
+    .project-set-btn {
+      display: inline;
+      ul li {
+        a {
+          color: #000;
+        }
+      }
+    }
   }
 } 
 //home/index page
