--- a/app/views/training_platform/projects/index.html.erb
+++ b/app/views/training_platform/projects/index.html.erb
@@ -37,12 +37,17 @@
                   <%= link_to("javascript:void(0);", title: current_user.try(:voted_up_on?,project) ? "取消收藏" : "收藏", class: "vote-create-a", voteable_id: project.id, voteable_type: project.class, style_type: "project-list", id: "projectListShowLink#{project.id}") do %>
                     <span class="glyphicon <%= (current_user.try(:voted_up_on?,project)) ? "glyphicon-star" : "glyphicon-star-empty" %> " aria-hidden="true"></span>
                   <% end %>
-                  <%= link_to("#" , class: "") do %>
-                    <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
-                  <% end %>
-                  <%= link_to("#" , class: "") do %>
-                    <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                  <% end %>
+                  <div class="dropdown project-set-btn">
+                    <a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                      <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="dLabel">
+                      <li><%= link_to "打开项目", training_platform_tasks_path %></li>
+                      <li><%= link_to "编辑项目", edit_training_platform_project_path(project), remote: true, format: :js %></li>
+                      <li><a href="#">归档项目</a></li>
+                      <li><a href="#">删除项目</a></li>
+                    </ul>
+                  </div>
                 </div>
                 <div class="col-xs-4 col-md-3 col-sm-3 col-lg-3 text-center">
                   <div class="easy-pie-chart percentage" data-percent="<%= project.task_percentage %>" data-color="#fff">
