project set btn css

--- a/app/assets/stylesheets/training_platform/projects.css.scss
+++ b/app/assets/stylesheets/training_platform/projects.css.scss
@@ -27,11 +27,16 @@
 
     .project-set-btn {
       display: inline;
-      ul li {
-        a {
-          color: #000;
+      ul.dropdown-menu{
+        right: -16px;
+        left: auto;
+        min-width: 100px;
+        li {
+          a {
+            color: #000;
+          }
         }
-      }
+      } 
     }
   }
 } 
